# plih

./: .gitignore  LICENSE  README.md  SimpleInterpreters.lhs  SimpleInterpreters.md  _config.yml  blog.md  feed.xml  index.md
_drafts/: 2013-12-18-XKCD-and-Lisp.md  2014-01-04-January-Travel.md  2014-01-05-More-XKCD.md  2014-01-23-Lecture-Code.md  2014-01-29-Imagining-Malice.md  2014-02-06-Practice-Evaluator.md  2014-02-18-Project-1-Details.md  2014-02-20-PLAI.md  2014-02-20-Project-1-Testing-Update.md  2014-02-23-Project-1-Odds-And-Ends-Updated.md  2014-03-12-Project-2-Parsing.md  2014-03-12-Project-2-Testing.md  2014-03-25-Project-1-Graded.md  2014-03-25-Project-1-Grading.md  2014-03-25-Project-2-Info.md  2014-03-28-Project-2-Test-Cases.md  2014-04-14-Project-2-Grading.md  2014-04-14-Project-3-Posted.md  2014-04-28-Final-Exam-Topics.md  2014-04-28-Project-4-is-up.md  2014-1-1-Project-0-Visiting.md  2016-06-13-Notations-and-Preliminaries.md  Final-Exam.md  Midterm-Exam.md  Project-1-Building-Interpreters.md  Project-2-Adding-Functions-Counditions-and-Elaboration.md  Project-2-Solutions.md  Project-3-Static-Scoping-and-Recursion.md  Project-3-Test-Cases.md  Project-4-Adding-State-and-Sequencing.md  Project-4-Test-Cases.md  Project-5-Type-Checking.md
_front/: 0-Thanks.md  1-Inspirations-and-Rationale.md
_funs/: 1-Adding-Functions.md  2-Function-Features.md  2-Scoping.md  3-Currying.md  3-Function-Features.md  3-Recursion.md  3-Scoping.md  3-Static-and-Dynamic-Scoping.md  4-Elaboration.md  4-Function-Types.md  4-Recursion.md  5-Elaboration.md  5-Reader-Monad.md  5-Recursion.md  5-Typed-Recursion.md  6-Elaboration.md  6-Strict-and-Lazy.md  7-Reader-Monad.md  7-Untyped-Recursion.md
_ids/: 1-Adding-IDs.md  2-Adding-Environments.md  3-Adding-Booleans-Redux.md  4-Programs-Are-Data-Structures.md
_intro/: 0-Acknowledgements.md  0-Notations-and-Preliminaries.md  1-Notations-and-Preliminaries.md  2-Do-Notation.md  2-Formal-Systems.md  3-Monadic-Interpreter.md
_layouts/: blog.html  frontpage.html  project.html
_posts/: 1-3-Failure.md  1-4-Methodology.md  (+47 more)
haskell/PLIH.hsproj/: .uuid  Abe.hs  AbeM.hs  Ae.hs  Bae.hs  Bbaeg.hs  Bbaet.hs  Do.hs  Fbae.hs  FbaeM.hs  Fbaer.hs  Fbaes.hs  FbaesM.hs  Fbaesr.hs  Fbaet.hs  Fbbaet.hs  Fbbaets.hs  FbbaetsM.hs  FbbaetsMM.hs  Fobae.hs  NewModule2.hs  PLIH.cabal  Proj2.hs  Proj2Utils.hs  _Abe.hsplay  _Ae.hsplay  _Do.hsplay  _Fbbaets.hsplay  _FbbaetsM.hsplay  _Proj2.hsplay  _Proj2Utils.hsplay  _Proj3Utils.hsplay
(+66 files in other folders)
