name: PLIH
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
license-file: stack.yaml
copyright: Copyright Perry Alexander
maintainer: Perry Alexander
stability: experimental
synopsis: Haskell code for PLIH
category: Education
author: Perry Alexander
x-ghc-framework-version: 7.10.3-6.29-1
x-last-ide-version: HfM1.4.0
Executable Untitled
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      QuickCheck -any,
      random -any,
      parsec -any
  other-modules:
      Fbaer
      Abe
      Do
      FbaeM
      FbaesM
      Fbaesr
      Fbaes
      AbeM
      ParserUtils
      Proj3Utils
      Proj2
      Proj2Utils
      Fbae
      Ae
      Bbaet
      Bae
      Fbaet
      Fbbaet
