name: PLIH
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
license-file: stack.yaml
copyright: Copyright Perry Alexander
maintainer: Perry Alexander
stability: experimental
synopsis: Haskell code for PLIH
category: Education
author: Perry Alexander
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable Untitled
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      QuickCheck -any,
      random -any,
      parsec -any
  other-modules:
      Ae
      Proj2Utils
      Fbae
      Proj2
      Fbaer
      Bbaet
      Do
      Abe
      Fbaesr
      Bae
      ParserUtils
      AbeM
      FbaesM
      Fbaes
      Proj3Utils
      Fbaet
      FbaeM
      Fbbaet
