name: PLIH
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
license-file: stack.yaml
copyright: Copyright Perry Alexander
maintainer: Perry Alexander
stability: experimental
synopsis: Haskell code for PLIH
category: Education
author: Perry Alexander
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable Untitled
    main-is: Main.hs
    build-depends:
        base -any,
        QuickCheck -any,
        random -any,
        parsec -any
    other-modules:
        Ae
        Proj2Utils
        Fbae
        Proj2
        Fbaer
        Bbaet
        Do
        Abe
        Fbaesr
        Bae
        Fbbaets
        FbbaetsM
        ParserUtils
        AbeM
        FbaesM
        Fbaes
        Proj3Utils
        Fbaet
        FbaeM
        Fbbaet

